fixing fps mouse control on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -83,6 +83,7 @@ body {
   position: fixed;
   left: 20px;
   bottom: 20px;
+  color: #000;
   font-size: 15px;
 }
 
